# AsaFG

./: Makefile  README.md  README.rst  meson.build  version.sh
include/asa/fg/: ArmamentHitNotification.hpp  ArmamentInFlightNotification.hpp  AsaFGNetIO.hpp  Config.hpp  Emesary.hpp  FGNotification.hpp  Factory.hpp  Mpmessages.hpp  ObjectInFlightNotification.hpp  Processmsg.hpp  StaticNotification.hpp  Translator.hpp  Utils.hpp  Xdrclient.hpp
include/asa/fg/player/: AsaFGFighter.hpp  AsaFGMissile.hpp
scripts/: build.sh  deps.sh
src/: ArmamentHitNotification.cpp  ArmamentInFlightNotification.cpp  AsaFGNetIO.cpp  Emesary.cpp  Factory.cpp  ObjectInFlightNotification.cpp  Processmsg.cpp  StaticNotification.cpp  Translator.cpp  Utils.cpp  Xdr.cpp  Xdrclient.cpp  export.cpp  meson.build
src/player/: AsaFGFighter.cpp  AsaFGMissile.cpp
tests/xdr_client/: README.md  main.cpp  meson.build
